Refactor code for clarity and consistency